# Pi

./: .gitignore  .gitmodules  CMakeLists.txt  EXECUTABLE.uf2  README.md  V1.1.uf2  agrum_v0.1.uf2  v1.0.uf2
AGRUM/: CMakeLists.txt  type_code.bat
AGRUM/doc/: prezi.url
AGRUM/src/: CMakeLists.txt  ThingsBoard.c  agrum_mqtt.c  agrum_mqtt.h  interface.c  interface.h  lwipopts.h  main.c  mqtt.c  mqtt.h  wifi.h
AGRUM/src/I2C/: ADS7828.c  ADS7828.h  CMakeLists.txt  I2C_wrapper.c  I2C_wrapper.h  PI4IOE5V9554.c  PI4IOE5V9554.h  SHT.c  SHT.h
AGRUM/src/IO_expender/: I2C_wrapper.c  I2C_wrapper.h  PI4IOE5V9554.c  PI4IOE5V9554.h
AGRUM/src/actuator/: CMakeLists.txt  actuator.c  actuator.h
AGRUM/src/actuator/led/: CMakeLists.txt  led.c  led.h
AGRUM/src/actuator/motor/: CMakeLists.txt  motor.c  motor.h
AGRUM/src/actuator/pump/: CMakeLists.txt  pump.c  pump.h
AGRUM/src/actuator/valve/: CMakeLists.txt  valve.h
AGRUM/src/measure/: CMakeLists.txt  measure.c  measure.h
AGRUM/src/thingsboard/: ThingsBoard.c  ThingsBoard.h  mqtt.c  mqtt.h  ntp.c  ntp.h  wifi.c
AGRUM/src/timing/: CMakeLists.txt
AGRUM/src/timing/ntp/: ntp.c  ntp.h
AGRUM/src/timing/rtc/: rtc.c  rtc.h
AGRUM/src/wifi/: CMakeLists.txt  ThingsBoard.c  ThingsBoard.h  weather.c  weather.h  wifi.c  wifi.h
app/: CMakeLists.txt  CMakeLists_subdir.txt  FreeRTOSConfig.h  actuator.h  main.c  measure.c
app/energy_management/: CMakeLists.txt  energy_management.c  energy_management.h
app/irrigation/: CMakeLists.txt  irrigation.c  irrigation.h
app/pv_management/: CMakeLists.txt  pv_management.c  pv_management.h
app/utils/: CMakeLists.txt  context.h  led.c  led.h  test.c  test.h  utils.c  utils.h
driver/: CMakeLists.txt  lwipopts.h
driver/ADS7828/: ADS7828.c  ADS7828.h  CMakeLists.txt
driver/PI4IOE5V9554A/: CMakeLists.txt  PI4IOE5V9554.c  PI4IOE5V9554.h  PI4IOE5V9554A.c  PI4IOE5V9554A.h
driver/SHT/: CMakeLists.txt  SHT.c  SHT.h
driver/ThingsBoard/: CMakeLists.txt  ThingsBoard.c  ThingsBoard.h
driver/warp_MQTT/: mqtt.c  mqtt.h
driver/wrap_FLASH/: CMakeLists.txt  wrap_FLASH.c  wrap_FLASH.h
driver/wrap_I2C/: CMakeLists.txt  I2C_wrapper.c  I2C_wrapper.h  wrap_I2C.c  wrap_I2C.h
driver/wrap_MQTT/: CMakeLists.txt  wrap_MQTT.c  wrap_MQTT.h
driver/wrap_NTP/: CMakeLists.txt  ntp.h  wrap_NTP.c  wrap_NTP.h
driver/wrap_PWM/: CMakeLists.txt  wrap_PWM.c  wrap_PWM.h
driver/wrap_RTC/: CMakeLists.txt  rtc.c  rtc.h  wrap_RTC.c  wrap_RTC.h
driver/wrap_WATCHDOG/: CMakeLists.txt  wrap_WATCHDOG.c  wrap_WATCHDOG.h
driver/wrap_WIFI/: CMakeLists.txt  wrap_WIFI.c  wrap_WIFI.h
hal/: CMakeLists.txt
hal/interface/: CMakeLists.txt  interface.c  interface.h
hal/motor/: CMakeLists.txt  motor.c  motor.h
hal/pump/: CMakeLists.txt  pump.c  pump.h
hal/sensors/: CMakeLists.txt  sensors.c  sensors.h
hal/time/: timing.c  timing.h
hal/timing/: CMakeLists.txt  timing.c  timing.h
hal/valve/: CMakeLists.txt  valve.c  valve.h
hal/weather/: CMakeLists.txt  weather.c  weather.h
